feat: modulo song implementado

--- a/public/index.html
+++ b/public/index.html
@@ -72,13 +72,13 @@
           </p>
         </article>
 
-        <article class="section__entity" aria-labelledby="suscripcion-title">
+        <!-- <article class="section__entity" aria-labelledby="suscripcion-title">
           <h3 id="suscripcion-title" class="section__subtitle">Suscripción</h3>
           <p class="section__text">
             Permite registrar el interés de un usuario en recibir notificaciones
             sobre futuras publicaciones asociadas a uno o varios artistas.
           </p>
-        </article>
+        </article> -->
       </section>
 
       <!-- Endpoints -->
@@ -96,7 +96,7 @@
           NestJS para cada entidad:
         </p>
 
-        <article
+        <!-- <article
           class="section__entity"
           aria-labelledby="usuario-endpoints-title"
         >
@@ -227,7 +227,7 @@
               suscripción
             </li>
           </ul>
-        </article>
+        </article> -->
       </section>
     </main>
 
